# mcptesting

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/backend/: pyproject.toml
apps/backend/src/backend/: main.py
apps/frontend/: package.json
apps/frontend/app/: globals.css  layout.tsx  leaderboard-table.tsx  mcp-leaderboard.tsx  mcp-server-card.tsx  mcp-types.ts  page.tsx  score-cell.tsx
apps/frontend/app/[serverId]/: layout.tsx  overview-cards.tsx  page.tsx  score-display.tsx  score-pie-chart.tsx  server-header.tsx  tab-nav.tsx
apps/frontend/app/[serverId]/security/: category-breakdown.tsx  checks-table.tsx  dropdown-filter.tsx  evidence-renderer.tsx  json-block.tsx  mock-adapter.ts  mock-security-data.ts  page.tsx  score-display.tsx  security-dashboard.tsx  security-description.tsx  security-pie-chart.tsx  security-radar-chart.tsx  security-scan-client.tsx  server-registry.ts
apps/frontend/app/[serverId]/tool/: page.tsx  performance-pie-chart.tsx  task-list.tsx  task-trace-viewer.tsx  tool-score-display.tsx  tool-score.tsx  trace-message.tsx
apps/frontend/app/api-test/: page.tsx
apps/frontend/app/api/security-description/: route.ts
apps/frontend/app/repos/: page.tsx
apps/frontend/app/types/: api.ts  core.ts  index.ts  leaderboard.ts  security.ts  server-detail.ts  tool-evaluation.ts
apps/frontend/data/: filesystem.json  github.json  sqlite.json
apps/frontend/lib/: api.ts  data-loader.ts  swarms-api.ts
apps/frontend/types/: api.ts
scripts/: run_backend_scan.py  setup_mcp_env.sh  test_security_scan.py
