[project]
name = "backend"
version = "0.1.0"
description = "Python backend API"
readme = "README.md"
authors = [
    { name = "darin", email = "darinkishore@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "shared",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
